tests/ui/codegen/invalid-llvm-intrinsic.stderr
error: invalid LLVM Intrinsic `llvm.abcde`
  --> $DIR/invalid-llvm-intrinsic.rs:8:5
   |
LL |     fn foo();
   |     ^^^^^^^^^
   |
   = note: `#[deny(unknown_llvm_intrinsic)]` on by default

error: aborting due to 1 previous error

